fix overflow

--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -107,6 +107,7 @@ ul.not-list li {
   text-overflow: ellipsis;
   white-space: nowrap;
   vertical-align: top;
+  width: 70vw;
 }
 
 .dont-break-out {
